--- a/app/src/main/res/layout/fragment_note_add.xml
+++ b/app/src/main/res/layout/fragment_note_add.xml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.NoteAddFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".view.NoteAddFragment"
+    android:padding="16dp">
 
-    <TextView
+    <EditText
+        android:id="@+id/etTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ADD FRAGMENT"
-        android:textSize="28sp"/>
+        android:hint="Title..."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/etDesc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Description..."
+        app:layout_constraintTop_toBottomOf="@id/etTitle"
+        app:layout_constraintStart_toStartOf="@id/etTitle"
+        app:layout_constraintEnd_toEndOf="@id/etTitle"
+        app:layout_constraintBottom_toTopOf="@id/btnAdd"/>
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        app:layout_constraintTop_toBottomOf="@id/etDesc"
+        app:layout_constraintStart_toStartOf="@id/etDesc"
+        app:layout_constraintEnd_toEndOf="@id/etDesc"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
