--- a/app/src/main/res/layout/fragment_note_add.xml
+++ b/app/src/main/res/layout/fragment_note_add.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Title..."
+        app:layout_constraintVertical_bias="0.25"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
