--- a/app/src/main/res/navigation/graph_add_note.xml
+++ b/app/src/main/res/navigation/graph_add_note.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_note_list" >
         <action
             android:id="@+id/action_noteListFragment_to_noteAddFragment"
-            app:destination="@id/noteAddFragment" />
+            app:destination="@id/noteAddFragment"
+            app:popUpTo="@id/noteAddFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/noteAddFragment"
@@ -21,6 +23,8 @@
         tools:layout="@layout/fragment_note_add" >
         <action
             android:id="@+id/action_noteAddFragment_to_noteListFragment"
-            app:destination="@id/noteListFragment" />
+            app:destination="@id/noteListFragment"
+            app:popUpTo="@id/noteListFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
 </navigation>
