--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/clToolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/purple_500"
+        android:background="@color/yellow_500"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +61,7 @@
         android:layout_margin="16dp"
         android:elevation="8dp"
         android:src="@drawable/ic_add"
+        android:backgroundTint="@color/grey_500"
         app:layout_constraintVertical_bias="1"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintEnd_toEndOf="parent"
